Fixed offset being wrong now that whitespace is removed in dist.

--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -456,7 +456,7 @@ div.main-ui
                 line-height: 25px;
                 color: rgba(255, 255, 255, 0.6);
                 min-width: 40px;
-                margin-right: -1.5px;
+                margin-right: 2px;
                 text-align: center;
 
                 & > i
